# humbletray

./: humbletray.spec  main.spec  pybuild.bat  pyproject.toml  pyship.bat  setup.cfg  setup.py  test_systray.spec
humbletray/: __init__.py  __main__.py  chromeapp.py  layout.py  main.py  systray.py  test_systray.py  test_systray.spec
humbletray/__pyinstaller/: __init__.py  hook-humbletray.py  hook-test_systray.py
tests/: test_basic.py
